# gintel

./: CMakeLists.txt  README.md  links.txt
src/: CCamelCaseKeyGenerator.cpp  CCamelCaseKeyGenerator.h  CClangParser.cpp  CClangParser.h  CClangSymbolsInMemoryDB.cpp  CClangSymbolsInMemoryDB.h  CGintelEngine.cpp  CGintelEngine.h  CMakeLists.txt  CObjectIndex.cpp  CObjectIndex.h  CObjectStore.cpp  CObjectStore.h  CSourceEnumerator.cpp  CSourceEnumerator.h  CSymbolsDB.cpp  CSymbolsDB.h  IStoreObject.h  main.cpp  poc.cpp
src/gintel/: CCamelCaseKeyGenerator.cpp  CClangParser.cpp  CClangParser.h  CClangSymbolsInMemoryDB.cpp  CClangSymbolsInMemoryDB.h  CClangUtil.cpp  CClangUtil.h  CGintelEngine.cpp  CGintelEngine.h  CMakeLists.txt  CObjectIndex.cpp  CObjectIndex.h  CObjectStore.cpp  CObjectStore.h  CSourceEnumerator.cpp  CSourceEnumerator.h  CSymbolInfo.cpp  GintelDataStruct.h  IGintelEngine.cpp  poc.cpp  util.h
src/include/: CSymbolInfo.h  IGintelEngine.h  IStoreObject.h
src/testapp/: CMakeLists.txt  main.cpp
target_sources/: test.cpp  test.h
target_sources/shape/: shape.cpp  shape.h
tests/: CCamelCaseKeyGenerator_UnitTests.cpp  CClangSymbolsInMemoryDB_UnitTest.cpp  CClangSymbolsInMemoryDB_UnitTests.cpp  CMakeLists.txt  CObjectIndex_UnitTest.cpp  CObjectStore_UnitTest.cpp  CObjectStore_UnitTests.cpp  DummyTest.cpp
